--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
     <h1> Let's tag </h1>
     <h2> code inserted </h2>
-    <h3> test </h3>
+    <h3> test1 </h3>
   </body>
   
 </html>
