--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-  <title>
+  <head>
     <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -7,8 +7,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-WJ4P7XC');</script>
 <!-- End Google Tag Manager -->
+  <title>
     Test for GA360
   </title>
+  </head>
   <body>
 <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WJ4P7XC"
@@ -16,7 +18,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
     <h1> Let's tag </h1>
     <h2> code inserted </h2>
-    <h3> test1 </h3>
+    <h3> test head added</h3>
   </body>
   
 </html>
