--- a/index.html
+++ b/index.html
@@ -1,5 +1,15 @@
 <html>
   <head>
+    <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-105864453-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
     <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -19,6 +29,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <h1> Let's tag </h1>
     <h2> code inserted </h2>
     <h3> test head added</h3>
+    <h3> Website Tracking added</h3>
   </body>
   
 </html>
