--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-WJ4P7XC');</script>
 <!-- End Google Tag Manager -->
+<script type="application/javascript">
+    function setBodyAttr(attr, value){
+      if (document.body) eval('document.body.'+attr+'="'+value+'"');
+      else notSupported();
+    }
+ </script>
   <title>
     Test for GA360
   </title>
