--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <h2> GTM code inserted </h2>
     <h3> test head added</h3>
     <h3> Website Tracking added and removed</h3>
+    <p> DOM added </p>
     Access <a href="http://www.cigna.com.hk">HK CIGNA</a>
     <div style="margin: .5in; height: 400;"> 
       <p><b><tt>text</tt></b></p> 
