--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         (sample link)</a></small><br>
       </form>
       <form>
-        <input type="button" value="version" onclick="ver()" />
+        <input type="test" value="version" onclick="ver()" />
       </form>
     </div>
   </body>
