--- a/index2.html
+++ b/index2.html
@@ -13,6 +13,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       else notSupported();
     }
  </script>
+
+<script type="application/javascript">
+    function myFunction() {
+    alert("I am an alert box!");
+}
+ </script>
+    
   <title>
     Test for GA360
   </title>
@@ -52,7 +59,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         (sample link)</a></small><br>
       </form>
       <form>
-        <input type="button" value="version" onclick="ver()" />
+        <input type="button" value="version" onclick="myFunction()" />
       </form>
     </div>
   </body>
