--- a/index2.html
+++ b/index2.html
@@ -30,10 +30,10 @@ function gaTest() {
       var clientId = tracker.get('clientId');
       alert(clientId);
       
-      document.write("clientId");
+      console.log("clientId");
     });
   
-  document.write("gaTest");
+  console.log("gaTest");
 
 }  
 
