--- a/index2.html
+++ b/index2.html
@@ -25,7 +25,7 @@ function myFunction() {
     alert("I am an alert box!");
 }
 
-ga(function(tracker) {
+gtag(function(tracker) {
   var clientId = tracker.get('clientId');
   console.log("tracker")
   console.log(clientId)
