--- a/index2.html
+++ b/index2.html
@@ -1,11 +1,26 @@
 <html>
   <head>
 <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+
+<script>
+ /*(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-WJ4P7XC');</script>
+})(window,document,'script','dataLayer','GTM-WJ4P7XC');*/
+  
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-105864453-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-105864453-1');
+</script>
+
+  
+</script>
 <!-- End Google Tag Manager -->
 <script type="application/javascript">
     function setBodyAttr(attr, value){
@@ -13,6 +28,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       else notSupported();
     }
  </script>
+ 
 
 <!-- Added to test client ID in google analytics -->
 
