--- a/index2.html
+++ b/index2.html
@@ -53,7 +53,7 @@ function gaTest() {
   
     var clientId; 
   
-    ga(function(tracker) {
+    gtag(function(tracker) {
       clientId = tracker.get('clientId');
       alert(clientId);
       
