--- a/index2.html
+++ b/index2.html
@@ -3,22 +3,14 @@
 <!-- Google Tag Manager -->
 
 <script>
- /*(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+ (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-WJ4P7XC');*/
+})(window,document,'script','dataLayer','GTM-WJ4P7XC');
 </script>  
     
   <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-105864453-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-105864453-1');
-</script>
 
   
 </script>
@@ -53,12 +45,15 @@ function gaTest() {
   
     var clientId; 
   
-    gtag(function(tracker) {
+    ga(function(tracker) {
       clientId = tracker.get('clientId');
       alert(clientId);
       
       console.log("clientId");
     });
+  
+  console.log(ga);
+  console.log(gtag);
   
   console.log(clientId);
   console.log("gaTest");
