--- a/index2.html
+++ b/index2.html
@@ -64,7 +64,7 @@ function gaTest() {
   
 function jqTest() {
   
-  $("#cid").value = clientId
+  $("#cid").value = "abc"
 }  
 
  </script>
@@ -108,9 +108,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         (sample link)</a></small><br>
       </form>
       <form>
-        <input type="text" id="cid" name="cid">
-        <input type="button" value="gaTest" onclick="gaTest()" />
-        <input type="button" value="jqTest" onclick="jqTest()" />
+        <input type="text" id="cid" name="cid"><br>
+        <input type="button" value="gaTest" onclick="gaTest()" /><br>
+        <input type="button" value="jqTest" onclick="jqTest()" /><br>
       </form>
     </div>
   </body>
