--- a/index2.html
+++ b/index2.html
@@ -47,6 +47,7 @@ function gaTest() {
     //var clientId; 
   
     ga(function(tracker) {
+      console.log(tracker)
       var clientId = tracker.get('clientId');
       $("#cid").val(clientId);
     });
