--- a/index2.html
+++ b/index2.html
@@ -40,7 +40,7 @@ function gaTest() {
     //var clientId; 
   
     ga(function() {
-      var tracker = ga.getByName('gtml')
+      var tracker = ga.getByName('gtm1')
       var clientId = tracker.get('clientId');
       $("#cid").val(clientId);
     });
