--- a/index2.html
+++ b/index2.html
@@ -1,10 +1,6 @@
 <html>
 <head>
 
-<!-- Initialize GTM dataLaye (move the snippet to GTM later??) -->
-<script>
-  dataLayer = [];
-</script>
   
 <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -23,7 +19,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 function submitForm() {
   
-    //var clientId; 
+    // Initiate dataLayer, create one if not already exists
+    window.dataLayer = window.dataLayer || [];
   
     ga(function() {
       
