--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <h3> test head added</h3>
     <h3> Website Tracking added and removed</h3>
     <p> DOM added </p>
-    Access <a href="http://www.cigna.com.hk">HK CIGNA</a>
+    <a href="https://www.cigna.com.hk/zh-hant/health-wellness/360-well-being">CIGNAHK 360</a>
     <div style="margin: .5in; height: 400;"> 
       <p><b><tt>text</tt></b></p> 
       <form> 
