--- a/campaign01.html
+++ b/campaign01.html
@@ -6,7 +6,13 @@
   </title>
   </head>
   <body>
-
+%div.select-ctr
+  %div.selected-input.input-preview What is your favourite pet?
+  %div.input.input-1{:data => {:val => "Cat"}} Cat
+  %div.input.input-2{:data => {:val => "Dog"}} Dog
+  %div.input.input-3{:data => {:val => "Birds"}} Birds
+  %div.input.input-4{:data => {:val => "Cow"}} Cow
+  %div.input.input-5{:data => {:val => "Bear"}} Bear
   </body>
   
 </html>
