--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       else notSupported();
     }
  </script>
+    <style>
+body {
+    background-color: linen;
+}
+
+h1 {
+    color: maroon;
+    margin-left: 40px;
+} 
   <title>
     Test for GA360
   </title>
