--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     }
  </script>
     <style>
-h1 {
-    color: maroon;
-    margin-left: 40px;
-} 
+div {
+  style="margin: .5in; height: 400;"
+}
       </style>
   <title>
     Test for GA360
@@ -34,7 +33,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <h3> Website Tracking added and removed</h3>
     <p> DOM added </p>
     <a href="https://www.cigna.com.hk/zh-hant/health-wellness/360-well-being">CIGNAHK 360</a>
-    <div style="margin: .5in; height: 400;"> 
+    <div> 
       <p><b><tt>text</tt></b></p> 
       <form> 
         <select onChange="setBodyAttr('text',
