--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ div {
 }
       </style>
   <title>
-    Test for GA360 Trump Trump
+    Test for GA360
   </title>
   </head>
   <body>
@@ -32,6 +32,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <h3> test head added</h3>
     <h3> Website Tracking added and removed</h3>
     <p> DOM added </p>
+    <p> Trump </p>
     <a href="https://www.cigna.com.hk/zh-hant/health-wellness/360-well-being">CIGNAHK 360</a>
     <div> 
       <p><b><tt>text</tt></b></p> 
