--- a/index.html
+++ b/index.html
@@ -12,12 +12,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       if (document.body) eval('document.body.'+attr+'="'+value+'"');
       else notSupported();
     }
- </script>
-    <style>
-div {
-  style="margin: .5in; height: 400;border: 1px solid #4CAF50;"
-}
-      </style>
+ </script> 
   <title>
     Test for GA360
   </title>
@@ -34,7 +29,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <p> DOM added </p>
     <p> Trump </p>
     <a href="https://www.cigna.com.hk/zh-hant/health-wellness/360-well-being">CIGNAHK 360</a>
-    <div> 
+    <div style="margin: .5in; height: 400;border: 1px solid #4CAF50;"> 
       <p><b><tt>text</tt></b></p> 
       <form> 
         <select onChange="setBodyAttr('text',
