--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <p> DOM added </p>
     <p> Trump Trump</p>
     <a href="https://www.cigna.com.hk/zh-hant/health-wellness/360-well-being">CIGNAHK 360</a>
-    <div style="margin: .5in; height: 400;border: 1px solid #4CAF50;"> 
+    <div style="margin: .5in; height: 400"> 
       <p><b><tt>text</tt></b></p> 
       <form> 
         <select onChange="setBodyAttr('text',
