--- a/index.html
+++ b/index.html
@@ -31,6 +31,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <a href="https://www.cigna.com.hk/zh-hant/health-wellness/360-well-being">CIGNAHK 360</a>
     <div style="margin: .5in; height: 400"> 
       <p><b><tt>text</tt></b></p> 
+      <form>
+        First name:<br>
+        <input type="text" name="firstname"><br>
+        Last name:<br>
+        <input type="text" name="lastname"><br>
+        Phone Number:<br>
+        <input type="text" name="Phone No.">
+      </form>
       <form> 
         <select onChange="setBodyAttr('text',
         this.options[this.selectedIndex].value);"> 
